# Server-Tools

./: POSTGRESQL_UPDATES.md  README.md  changes  clean-code  cleaner  cluster  cluster_bindcfg.pl  cluster_nginx.pl  firewall  gemini.sql  hash-php  nginx  permissions-all  restrict-permissions  test_postgres_config_detection.py  test_postgres_mock.py  update-all  wpapikey
site-builder/: .gitignore  MANIFEST.in  README.md  __main__.py  config.ini.example  pyproject.toml  requirements.txt  setup-dev.sh
site-builder/config_generator/: __init__.py  config_generator.py
site-builder/core/: __init__.py  runtime_management.py  site_discovery.py
site-builder/database/: __init__.py  database_manager.py  mariadb_docker.py  mariadb_native.py
site-builder/nginx/: __init__.py
site-builder/pkgs/: __init__.py
site-builder/site_builder/: __init__.py  __main__.py
site-builder/site_builder/config_generator/: config_generator.py
site-builder/site_builder/core/: __init__.py  config_persistence.py  manager_factory.py  runtime_management.py  site_discovery.py  ssl_manager_factory.py  validation.py
site-builder/site_builder/database/: __init__.py  mariadb_native.py  postgresql_docker.py  postgresql_native.py
site-builder/site_builder/docker/: __init__.py  docker_manager.py
site-builder/site_builder/nginx/: nginx_docker.py  nginx_manager.py  nginx_native.py
site-builder/site_builder/pkgs/: pkgs_manager.py
site-builder/site_builder/resources/lighttpd-php8/: Dockerfile  entrypoint.sh  lighttpd.conf
site-builder/site_builder/ssl_certificate_manager/: ssl_certificate_manager.py
site-builder/site_builder/templates/: docker-compose.yml.tpl  nginx.conf.tpl  postgresql.conf.tpl
site-builder/ssl_certificate_manager/: __init__.py
site-builder/templates/: docker-compose.yml.tpl  my.cnf.tpl  nginx.conf.tpl
(+25 files in other folders)
