[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-builder"
version = "1.0.0"
description = "Generate Nginx and Docker configurations for web services"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bogdan Dobrica", email = "bdobrica@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.8"
dependencies = [
    "coloredlogs",
    "cryptography",
    "jinja2",
    "requests",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
site-builder = "site_builder.__main__:main"

[project.urls]
Homepage = "https://github.com/bdobrica/Server-Tools"
Repository = "https://github.com/bdobrica/Server-Tools"
Issues = "https://github.com/bdobrica/Server-Tools/issues"

[tool.setuptools]
packages = ["site_builder", "site_builder.config_generator", "site_builder.core", "site_builder.database", "site_builder.docker", "site_builder.nginx", "site_builder.pkgs", "site_builder.ssl_certificate_manager"]

[tool.setuptools.package-data]
site_builder = [
    "templates/*",
    "resources/lighttpd-php8/*",
    "resources/nginx-php8/*",
]
